--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,12 @@
   outline: none;
   padding: 10px;
 }
+
+/* FABs */
+.fab {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  position: fixed;
+  right: 25px;
+}
