--- a/src/styles.css
+++ b/src/styles.css
@@ -46,3 +46,12 @@
   position: fixed;
   right: 25px;
 }
+
+.fab-danger {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  position: fixed;
+  ledt: 25px;
+}
+
